<resources>
    <string name="app_name">SzyCalendar</string>

    <string name="sunday">周日</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>

    <string name="health_beyond_tips">未来日期没有三检结果哦！</string>
    <string name="drinkwater_beyond_tips">未来日期没有饮水信息哦！</string>

</resources>
